welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: not found: value cpt
  	cpt += 1
        ^loneTeen:6: error: not found: value cpt
  	cpt += 1
        ^loneTeen:8: error: not found: value cpt
  if (cpt >1)
      ^