welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def loneTeen(a:Int, b:Int):Boolean = {
  if ( 13 <= a && a <= 19) 
  	cpt += 1
  
  if ( 13 <= b && b <= 19) 
  	cpt += 1
  
  if (cpt >1)
  	return false
  
  return true
}